Add basic portfolio page with headings, paragraphs, and image with caption

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -17,5 +17,9 @@
          <p>The journey is hard and time consuming but it will be worth it at the end.</p>
        <h4>Contact me</h4>
           <p>To reach me just light a fire or something, or hit some drums in ululation an i'll be there</p>
+       <figure>
+            <img src="https://m.imdb.com/title/tt1911658/mediaviewer/rm3273310464/?ref_=ttmi_mi_6" width="600" height="380" alt="Thankyou for your attention. Any question?.">
+            <figcaption>Thankyou for your attention!. Any Question?.</figcaption>
+       </figure>
 </body>
 </html>
