Add basic portfolio page with headings, paragraphs, and image with caption

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -20,6 +20,7 @@
        <figure>
             <img src="https://m.imdb.com/title/tt1911658/mediaviewer/rm3273310464/?ref_=ttmi_mi_6" width="600" height="380" alt="Thankyou for your attention. Any question?.">
             <figcaption>Thankyou for your attention!. Any Question?.</figcaption>
+             <a href="https://au.pinterest.com/pin/18366310975335380/">
        </figure>
 </body>
 </html>
