--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -75,13 +75,13 @@ figcaption {
 
     <body>
       <header>
-      <nav>
+      
         <ul class="nav-list">
           <li><a href="index.html" class="nav-button">Home</a></li>
           <li><a href="base_index.html" class="nav-button">Base Page</a></li>
           <li><a href="tweets.html" class="nav-button">Tweet</a></li>
         </ul>
-      </nav></header>
+      </header>
       <main>
       <article>
        <h1>Trevor's coding journey</h1>
