Update to portfolio pagestructure, added semantics= header, main(article, aside) and footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -40,7 +40,7 @@
   padding: 10px 20px;
   border-radius: 6px;
   text-decoration: none;
-  font font-weight: 600;
+  font-weight: 600;
   font-family: 'Segoe UI', sans-serif;
   transition: background-color 0.3s ease;
 
@@ -75,7 +75,6 @@ figcaption {
 
     <body>
       <header>
-      
         <ul class="nav-list">
           <li><a href="index.html" class="nav-button">Home</a></li>
           <li><a href="base_index.html" class="nav-button">Base Page</a></li>
@@ -95,7 +94,7 @@ figcaption {
           <p>To reach me just light a fire or something, or hit some drums in ululation and i'll be there</p>
        <figure>
               <a href="https://au.pinterest.com/pin/18366310975335380/">
-            <img src="/Thankyouforattention.jpeg" width="600" height="380" alt="Thankyou for your attention. Any question?.">
+            <img src="Thankyouforattention.jpeg" width="600" height="380" alt="Thankyou for your attention. Any question?.">
             <figcaption>Thankyou for your attention!. Any Question?.</figcaption>
              </a>
        </figure>
@@ -113,7 +112,7 @@ figcaption {
         speed="1"
         style="width: 50px; height: 50px"
         loop
-        autoplay>light a fire</dotlottie-player>
+        autoplay></dotlottie-player>
        </a>
        <a href="https://github.com/trevorkn" target="_blank">
        <dotlottie-player
