--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -157,8 +157,6 @@ I work from Linux, live in VS Code, and document my journey on GitHub and throug
                 path: 'githubIcon.json'
             })
         </script>
- <footer >
-  <p>&copy; 2024 Trevor Kipkemboi</p>
- </footer>
+ <footer ><p>&copy; 2024 Trevor Kipkemboi</p></footer>
 </body>
 </html>
